# sec-gemini

./: .gitignore  README.md  dist-workspace.toml  package-lock.json  package.json
.github/workflows/: PY-publish.yml  PY-test.yml  TS-publish.yml  WebComponent-publish.yml  cli-release.yml  cli.yml  python-test.yml  ts-test.yml
archive_v2/: README.md
archive_v2/.github/workflows/: python-test.yml
archive_v2/cli/: Cargo.toml  README.md  ci.sh  taplo.toml  test.sh
archive_v2/cli/src/: cli.rs  main.rs  tool.rs
archive_v2/documentation/: Dockerfile  package-lock.json
archive_v2/sec-gemini-python/: .gitignore  CHANGELOG.md
archive_v2/sec-gemini-python/scripts/: basic_example.py  basic_openai_example.py  check_image_for_scam_signs_example.py  test_local_tools.py
archive_v2/sec-gemini-python/sec_gemini/: enums.py  file.py  logger.py  utils.py
archive_v2/sec-gemini-python/tests/: test_local_tools_integration.py  test_logs_reasoning_local_search.py  test_secgemini.py  utils.py
archive_v2/sec-gemini-ts/: CHANGELOG.md  package-lock.json  tsup.config.ts
archive_v2/sec-gemini-ts/demo/: demo.ts
archive_v2/sec-gemini-ts/src/: enum.ts  http.ts  index.ts  secgeminitypes.ts  session.ts  streamer.ts  uuid.ts
archive_v2/sec-gemini-ts/tests/: session.test.ts  streamer.test.ts
archive_v2/web-component/: index.html  tsconfig.app.json
archive_v2/web-component/src/: main.ts  session-manager.ts
cli/: CHANGELOG.md  Cargo.toml  README.md  ci.sh  release.sh  sync.sh  taplo.toml
cli/src/: cli.rs  config.rs  main.rs  sdk.rs  tool.rs  util.rs
cli/src/cli/: interact.rs  markdown.rs  query.rs  session.rs  update.rs
cli/src/cli/interact/: cmds.rs  name.rs  shell.rs
cli/src/sdk/: http.rs  types.rs
cli/src/tool/: exec.rs  file.rs  net.rs
documentation/: astro.config.mjs  package-lock.json  package.json
documentation/src/pages/: webcomponent.html
documentation/src/styles/: globals.css
notebook/: adversarial_red_team_eval.ipynb  basic_sdk_usage.ipynb  cybergym_challenge.ipynb  dfir_investigation.ipynb  sdk_byot_custom_mcp.ipynb  sec_gemini_sdk_tui_demo.ipynb  skills_usage.ipynb
openapi/: openapi.json
sec-gemini-kotlin/: README.md
sec-gemini-kotlin/docs/: Attachment.md  ChatCompletionRequest.md  ChatCompletionResponse.md  Choice.md  Content.md  DefaultApi.md  Feedback.md  FeedbackType.md  Message.md  MessageType.md  MimeType.md  ModelInfoInput.md  ModelInfoOutput.md  OpResult.md  OpenAIContent.md  OpenAIMessage.md  OpenAIUsage.md  OptionalToolSet.md  PublicSessionFile.md  PublicSessionInput.md  PublicSessionOutput.md  PublicUser.md  PublicUserVendor.md  ResponseStatus.md  Role.md  SessionRequest.md  SessionResponse.md  State.md  ToolSetVendor.md  Usage.md  UserInfo.md  UserType.md  ValidationError.md  ValidationErrorLocInner.md
sec-gemini-python/: .gitignore  CHANGELOG.md  README.md  demo.ipynb  justfile  pyproject.toml
sec-gemini-python/deobfuscation/: README.md  pyproject.toml
sec-gemini-python/deobfuscation/deobfuscate/: __init__.py  api.py
sec-gemini-python/deobfuscation/scripts/: basic_example.py
sec-gemini-python/deobfuscation/tests/: api_test.py
sec-gemini-python/scripts/: attach_logs_example.py  basic_example.py  basic_example_with_stream.py  basic_openai_example.py  check_image_for_scam_signs_example.py  check_source.sh  local_tools_example.py  logs_reasoning_local_search.py  test_local_tools.py
sec-gemini-python/sec_gemini/: __init__.py  enums.py  file.py  http.py  logger.py  secgemini.py  session.py  utils.py
sec-gemini-python/sec_gemini/logs_reasoning/: README.md  logstore.py
sec-gemini-python/sec_gemini/logs_reasoning/sqlite_backend/: sql_query.py  sqlite.py
sec-gemini-python/sec_gemini/models/: attachment.py  delete_file_request.py  detach_file_request.py  enums.py  feedback.py  local_tool.py  message.py  modelinfo.py  opresult.py  public.py  session_request.py  session_response.py  usage.py
sec-gemini-python/secgemini/: __init__.py  enums.py  secgemini.py  session.py
sec-gemini-python/secgemini/models/: __init__.py  attachment.py  enums.py  feedback.py  key_info.py  message.py  opresult.py  session.py  session_request.py  session_response.py  usage.py  user.py
sec-gemini-python/tests/: conftest.py  convert_to_tests.py  test_local_tools_integration.py  test_secgemini.py  test_tool.py  utils.py
sec-gemini-ts/: .gitignore  .npmignore  .prettierrc  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sec-gemini-ts/src/: demo.ts  enum.ts  http.ts  index.ts  secgeminienums.ts  secgeminitypes.ts  session.ts  sessionNameGenerator.ts  streamer.ts  uuid.ts
sec-gemini-ts/src/enums/: messsagetype.ts
sec-gemini-ts/tests/: http.test.ts  index.test.ts  mock_socket.ts  session.test.ts  streamer.test.ts
web-component/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-component/local_modules/: sec-gemini-1.1.2.tgz
web-component/src/icons/: MaterialSymbolsAdd2Bold.svelte  MaterialSymbolsAdd2Rounded.svelte.d.ts  MaterialSymbolsAdminPanelSettingsOutline.svelte  MaterialSymbolsBolt.svelte  MaterialSymbolsBolt.svelte.d.ts  MaterialSymbolsBook2Outline.svelte  MaterialSymbolsBook2Outline.svelte.d.ts  MaterialSymbolsBreakingNewsOutlineRounded.svelte  MaterialSymbolsBugReportOutline.svelte.d.ts  MaterialSymbolsCheckCircleOutlineRounded.svelte  MaterialSymbolsChevronRightRounded.svelte  MaterialSymbolsChevronRightRounded.svelte.d.ts  MaterialSymbolsClose.svelte.d.ts  MaterialSymbolsContentCopyOutlineRounded.svelte.d.ts  MaterialSymbolsDatabaseSearch.svelte  MaterialSymbolsDeleteOutline.svelte  MaterialSymbolsErrorOutlineRounded.svelte  MaterialSymbolsFullscreen.svelte  MaterialSymbolsFullscreenExit.svelte  MaterialSymbolsInkPenOutline.svelte  MaterialSymbolsLightbulb2Outline.svelte  MaterialSymbolsLogoutRounded.svelte  MaterialSymbolsShareOutline.svelte  MaterialSymbolsShareOutline.svelte.d.ts  MaterialSymbolsThumbDown.svelte.d.ts  MaterialSymbolsThumbDownOutline.svelte.d.ts  MdiIncognito.svelte  (+11 more)
website/: README.md  astro.config.mjs  package-lock.json  package.json
(+139 files in other folders)
