[project]
name = "sec_gemini"
version = "1.1.5"
description = "Sec-Gemini Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "magika>=0.6.2",
    "mcp>=1.15.0",
    "openai>=1.59.7",
    "orjson>=3.10.12",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "websockets>=14.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.13.2",
    "types-tqdm>=4.67.0.20250516",
]

[tool.ruff]
indent-width = 2
line-length = 80
lint.select = [
    "E", "F", "I", "ICN", "UP", "B", "D",
]

lint.ignore = [
    "D203",
    "D212",
    "D213",
    "D406",
    "D407",
    "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["your_project_name"]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["datetime", "os", "sys"]


[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.setuptools.packages.find]
include = ["sec_gemini*"]
